fix
fix: adicionado criar musica a partir de link com permissao admin
